--- a/apps/editor/src/styles.css
+++ b/apps/editor/src/styles.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 /* You can add global styles to this file, and also import other style files */
+
+html, body, #root {
+    width: 100%;
+    height: 100%;
+}
